--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@import '~normalize.css';
-@import '~@blueprintjs/core/lib/css/blueprint.css';
-
-body {
-	background-color: #394b59;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
